--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
 
     <div class="w-full max-w-xl relative flex">
       <span class="absolute left-4 top-3 text-lg text-gray-400">
-        <i class="fa-solid fa-magnifying-glass"></i>
+        <fa-icon [icon]="faSearch"></fa-icon>
+        <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
       </span>
       <input
         type="text"
@@ -28,7 +29,7 @@
         class="text-center text-gray-700 hover:text-primary transition relative"
       >
         <div class="text-2xl">
-          <i class="fa-regular fa-heart"></i>
+          <fa-icon [icon]="faHeart"></fa-icon>
         </div>
         <div class="text-xs leading-3">Wishlist</div>
         <div
@@ -38,11 +39,12 @@
         </div>
       </a>
       <a
-        href="#"
+        href="javascript:void(0)"
         class="text-center text-gray-700 hover:text-primary transition relative"
+        routerLink="shop-cart"
       >
         <div class="text-2xl">
-          <i class="fa-solid fa-bag-shopping"></i>
+          <fa-icon [icon]="faShoppingCart"></fa-icon>
         </div>
         <div class="text-xs leading-3">Cart</div>
         <div
@@ -56,7 +58,7 @@
         class="text-center text-gray-700 hover:text-primary transition relative"
       >
         <div class="text-2xl">
-          <i class="fa-regular fa-user"></i>
+          <fa-icon [icon]="faUser"></fa-icon>
         </div>
         <div class="text-xs leading-3">Account</div>
       </a>
@@ -70,13 +72,13 @@
       class="px-8 py-4 bg-primary md:flex items-center cursor-pointer relative group hidden"
     >
       <span class="text-white">
-        <i class="fa-solid fa-bars"></i>
+        <fa-icon [icon]="faBars"></fa-icon>
       </span>
-      <span class="capitalize ml-2 text-white hidden">All Categories</span>
+      <span class="capitalize ml-2 text-white hidden">Tất cả danh mục</span>
 
       <!-- dropdown -->
       <div
-        class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible"
+        class="absolute w-fit left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible"
       >
         <a
           href="#"
@@ -149,19 +151,19 @@
 
     <div class="flex items-center justify-between flex-grow md:pl-12 py-5">
       <div class="flex items-center space-x-6 capitalize">
-        <a href="index.html" class="text-gray-200 hover:text-white transition"
-          >Home</a
+        <a href="javascript:void(0)" class="text-gray-200 hover:text-white transition"
+        routerLink="/" >Trang chủ</a
         >
         <a
-          href="pages/shop.html"
+          href="javascript:void(0)"
           class="text-gray-200 hover:text-white transition"
-          >Shop</a
+          routerLink="shop-page" >Shop</a
         >
-        <a href="#" class="text-gray-200 hover:text-white transition"
-          >About us</a
+        <a href="javascript:void(0)" class="text-gray-200 hover:text-white transition"
+          >Về chúng tôi</a
         >
-        <a href="#" class="text-gray-200 hover:text-white transition"
-          >Contact us</a
+        <a href="javascript:void(0)" class="text-gray-200 hover:text-white transition"
+          >Liên hệ chúng tôi</a
         >
       </div>
       <a
@@ -174,147 +176,148 @@
 </nav>
 <div class="scroll-height">
   <router-outlet></router-outlet>
-  <footer class="bg-white pt-16 pb-12 border-t border-gray-100">
-    <div class="container grid grid-cols-1">
-      <div class="col-span-1 space-y-4">
-        <img src="assets/images/logo.svg" alt="logo" class="w-30" />
-        <div class="mr-2">
-          <p class="text-gray-500">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, hic?
-          </p>
+  
+</div>
+<footer class="bg-white pt-16 pb-12 border-t border-gray-100">
+  <div class="container grid grid-cols-1">
+    <div class="col-span-1 space-y-4">
+      <img src="assets/images/logo.svg" alt="logo" class="w-30" />
+      <div class="mr-2">
+        <p class="text-gray-500">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, hic?
+        </p>
+      </div>
+      <div class="flex space-x-5">
+        <a href="#" class="text-gray-400 hover:text-gray-500"
+          ><i class="fa-brands fa-facebook-square"></i
+        ></a>
+        <a href="#" class="text-gray-400 hover:text-gray-500"
+          ><i class="fa-brands fa-instagram-square"></i
+        ></a>
+        <a href="#" class="text-gray-400 hover:text-gray-500"
+          ><i class="fa-brands fa-twitter-square"></i
+        ></a>
+        <a href="#" class="text-gray-400 hover:text-gray-500">
+          <i class="fa-brands fa-github-square"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-span-2 grid grid-cols-2 gap-4">
+      <div class="grid grid-cols-2 gap-4 md:gap-8">
+        <div>
+          <h3
+            class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+          >
+            Solutions
+          </h3>
+          <div class="mt-4 space-y-4">
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Marketing</a
+            >
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Analitycs</a
+            >
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Commerce</a
+            >
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Insights</a
+            >
+          </div>
         </div>
-        <div class="flex space-x-5">
-          <a href="#" class="text-gray-400 hover:text-gray-500"
-            ><i class="fa-brands fa-facebook-square"></i
-          ></a>
-          <a href="#" class="text-gray-400 hover:text-gray-500"
-            ><i class="fa-brands fa-instagram-square"></i
-          ></a>
-          <a href="#" class="text-gray-400 hover:text-gray-500"
-            ><i class="fa-brands fa-twitter-square"></i
-          ></a>
-          <a href="#" class="text-gray-400 hover:text-gray-500">
-            <i class="fa-brands fa-github-square"></i>
-          </a>
+
+        <div>
+          <h3
+            class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+          >
+            Support
+          </h3>
+          <div class="mt-4 space-y-4">
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Pricing</a
+            >
+            <!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Documentation</a> -->
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Guides</a
+            >
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >API Status</a
+            >
+          </div>
         </div>
       </div>
-
-      <div class="col-span-2 grid grid-cols-2 gap-4">
-        <div class="grid grid-cols-2 gap-4 md:gap-8">
-          <div>
-            <h3
-              class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+      <div class="grid grid-cols-2 gap-8">
+        <div>
+          <h3
+            class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+          >
+            Solutions
+          </h3>
+          <div class="mt-4 space-y-4">
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Marketing</a
             >
-              Solutions
-            </h3>
-            <div class="mt-4 space-y-4">
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Marketing</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Analitycs</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Commerce</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Insights</a
-              >
-            </div>
-          </div>
-
-          <div>
-            <h3
-              class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Analitycs</a
             >
-              Support
-            </h3>
-            <div class="mt-4 space-y-4">
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Pricing</a
-              >
-              <!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Documentation</a> -->
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Guides</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >API Status</a
-              >
-            </div>
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Commerce</a
+            >
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Insights</a
+            >
           </div>
         </div>
-        <div class="grid grid-cols-2 gap-8">
-          <div>
-            <h3
-              class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
-            >
-              Solutions
-            </h3>
-            <div class="mt-4 space-y-4">
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Marketing</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Analitycs</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Commerce</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Insights</a
-              >
-            </div>
-          </div>
 
-          <div>
-            <h3
-              class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+        <div>
+          <h3
+            class="text-sm font-semibold text-gray-400 uppercase tracking-wider"
+          >
+            Support
+          </h3>
+          <div class="mt-4 space-y-4">
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Pricing</a
             >
-              Support
-            </h3>
-            <div class="mt-4 space-y-4">
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Pricing</a
-              >
-              <!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Documentation</a> -->
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >Guides</a
-              >
-              <a
-                href="#"
-                class="text-base text-gray-500 hover:text-gray-900 block"
-                >API Status</a
-              >
-            </div>
+            <!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Documentation</a> -->
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >Guides</a
+            >
+            <a
+              href="#"
+              class="text-base text-gray-500 hover:text-gray-900 block"
+              >API Status</a
+            >
           </div>
         </div>
       </div>
     </div>
-  </footer>
-</div>
+  </div>
+</footer>
